@@ -41,7 +41,9 @@ namespace MySql.Data.MySqlClient
         IGNORE_SPACE = 256, // Ignore spaces before '('
         PROTOCOL_41 = 512, // Support new 4.1 protocol
         INTERACTIVE = 1024, // This is an interactive client
+#if !CF
         SSL = 2048, // Switch to SSL after handshake
+#endif
         IGNORE_SIGPIPE = 4096, // IGNORE sigpipes
         TRANSACTIONS = 8192, // Client knows about transactions
         RESERVED = 16384,               // old 4.1 protocol flag
